[package]
name = "schemeProject"
version = "0.1.0"
authors = ["Reuben Cornel <reuben.cornel@gmail.com>"]

[dependencies]
nom="5.0.0-beta3"
tuple="0.4.2"
rustyline="5.0.0"

[[bin]]
name="main"
path="src/main.rs"

[[bin]]
name="main2"
path="src/main2.rs"

[[bin]]
name="dogeparser"
path="src/dogeparser.rs"

[[bin]]
name="polishNotation"
path="src/polishNotation.rs"

[[bin]]
name="lispy"
path="src/lispy.rs"